fix: stick footer to bottom of page
Update the styles and layout of the page to ensure the footer remains stuck
to the bottom of the page instead of being pulled up as the page content
height changes.

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,13 @@
 .has-hover-text-link-dark:hover {
   @extend .has-text-link-dark;
 }
+
+.content-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.content-main {
+  flex: 1;
+}
