--- a/src/index.scss
+++ b/src/index.scss
@@ -35,3 +35,8 @@
   font-family: "October Crow";
   font-size: 2.2rem !important;
 }
+
+.ghost-info-accordion-content {
+  border-left: 3px solid $dark;
+  margin-left: 2.6rem !important;
+}
