--- a/src/index.scss
+++ b/src/index.scss
@@ -40,3 +40,9 @@
   border-left: 3px solid $dark;
   margin-left: 2.6rem !important;
 }
+
+.button:focus {
+  box-shadow: unset !important;
+  border-color: $dark !important;
+  color: unset !important;
+}
