feat: support rejecting a single ghost aside from evidence (!66)
* Add support for rejecting individual ghosts aside from the selected evidence
* Rejected ghosts get shown in red and crossed-out

https://gitlab.com/hectorjsmith/phasmophobia-guide/-/merge_requests/66

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,10 @@
   src: url(./fonts/october_crow.ttf) format('truetype');
 }
 
+.has-text-line-through {
+  text-decoration: line-through;
+}
+
 .has-letter-spacing {
   letter-spacing: 3px;
 }
