--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 // Replace this with sass option if I want to customise the Bulma theme
-@use "../node_modules/bulma/css/bulma.min.css";
+@use '../node_modules/bulma/css/bulma.min.css';
 
 footer {
   background-color: black !important;
