--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,7 @@ footer {
   flex: 1;
 }
 
-.ghost-info-accordion-content {
+.has-border-left-dark {
   border-left: 3px solid var(--bulma-dark);
   margin-left: 2.6rem !important;
 }
@@ -34,4 +34,16 @@ li::marker {
 
 .tag.is-transparent {
   background: transparent;
+}
+
+.has-pointer-on-hover:hover {
+  cursor: pointer;
+}
+
+.is-visible-on-hover {
+  visibility: hidden;
+}
+
+.hover-parent:hover .is-visible-on-hover {
+  visibility: visible;
 }
