update layout for ghost evidence

--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,10 @@ li::marker {
   background: transparent;
 }
 
+.tag.has-border {
+  border: 2px solid var(--bulma-dark);
+}
+
 .has-pointer-on-hover:hover {
   cursor: pointer;
 }
