change colour of forced evidence flag

--- a/src/index.scss
+++ b/src/index.scss
@@ -57,5 +57,5 @@ li::marker {
 }
 
 .tag.is-transparent.is-forced-evidence {
-  box-shadow: 0 2px 0 var(--bulma-danger);
+  box-shadow: 0 2px 0 var(--bulma-success);
 }
