feat: show forced evidences for ghosts (!79)
* Show "forced evidences" for each ghost - evidence that is always present
* Only show this option when the "show tips" toggle is enabled
* Add some extra tips for ghosts with forced evidence

https://gitlab.com/hectorjsmith/phasmophobia-guide/-/merge_requests/79

--- a/src/index.scss
+++ b/src/index.scss
@@ -55,3 +55,7 @@ li::marker {
 .no-underline {
   text-decoration: none !important;
 }
+
+.tag.is-transparent.is-forced-evidence {
+  box-shadow: 0 2px 0 var(--bulma-success);
+}
